# lost_in_a_melody

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
src/lost_in_a_melody/: __init__.py  acquire.py  cli.py  library.py  melody.py  notes.py  pipeline.py  render.py  samples.py  separate.py  server.py  suggest_stem.py  tempo.py  transcribe_poly.py
tests/: test_core.py  test_server.py
web/: app.js  index.html  style.css
